Added remove button to favorite list

--- a/src/app/components/favorite-list/favorite-list.component.html
+++ b/src/app/components/favorite-list/favorite-list.component.html
@@ -1,9 +1,12 @@
 <mat-list role="list">
-    <mat-list-item role="listitem" *ngFor="let item of list">
+    <mat-list-item role="listitem" *ngFor="let item of list; index as idx">
         <button mat-icon-button color="primary" matListItemIcon (click)="addFavorite.emit(item)">
             <mat-icon>shopping_cart</mat-icon>
         </button>
         <div matListItemTitle>{{item}}</div>
+        <button mat-icon-button color="basic" matListItemIcon (click)="list.splice(idx, 1)">
+            <mat-icon>cancel</mat-icon>
+        </button>
     </mat-list-item>
 </mat-list>
   
