--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,14 @@
 .nav-link {
   font-size: large;
+
+}
+
+.page_container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  text-align: center;
+  max-width: 80vw;
+  width: 80vh;
+  margin: 0 auto;
 }
