--- a/src/app/components/favorite-list/favorite-list.component.html
+++ b/src/app/components/favorite-list/favorite-list.component.html
@@ -1,5 +1,8 @@
-<mat-list role="list">
-    <mat-list-item role="listitem" *ngFor="let item of list; index as idx">
+<mat-list role="list" class="favorite-list-container">
+    <h3>
+        La roba preferita
+    </h3>
+    <mat-list-item role="listitem" *ngFor="let item of list; index as idx" class="favorite-list">
         <button mat-icon-button color="primary" matListItemIcon (click)="addFavorite.emit(item)">
             <mat-icon>shopping_cart</mat-icon>
         </button>
