--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -1,4 +1,17 @@
 .product-list-container {
-    width: 60%;
+    width: 100%;
+}
+.product-list-container .product-list-title {
+    text-align: center;
+}
+.product-list-container .product-list ::ng-deep .mat-chip-list-wrapper {
+    flex-direction: column;
+    align-items: center;
 }
 
+.product-list-container .product-list .product-list-input {
+    width: auto;
+    place-self: stretch;
+    margin: 1em 2em;
+    flex-basis: 0;
+}
